# mlops-zoomcamp

./: Makefile  README.md  pyproject.toml
W1/: homework.ipynb
W2/: duration-prediction.ipynb  homework.ipynb  nohup.out
W2/homework/: hpo.py  register_model.py  train.py
W3/03-hw/mlops/: metadata.yaml
W3/03-hw/mlops/homework_03/data_exporters/: yellow_taxi_data_log_model.py
W3/03-hw/mlops/homework_03/data_loaders/: yellow_taxi_data_loader.py
W3/03-hw/mlops/homework_03/pipelines/yellow_taxi_data_ingestion/: metadata.yaml
W3/03-hw/mlops/homework_03/transformers/: yellow_taxi_data_linreg_model.py  yellow_taxi_data_transformer.py
W3/03-hw/mlops/utils/data_preparation/: cleaning.py
W4/: batch.py  starter.ipynb
W5/: homework.ipynb
W6/: batch.py  batch_q3.py  batch_q4_q6.py  docker-compose.yml  integration_test.sh  integration_test_q6.py
W6/integration-test/: integration_test_q5.py
W6/tests/: test_batch.py
projecct/: Pipfile  hpo.py  monitoring.py  train.py
project/: .pre-commit-config.yaml  Makefile  README.md  batch_predict.py  docker-compose.yml  preprocessing.py  register_model.py  requirements.txt
