[tool.poetry]
name = "mlops-zoomcamp"
version = "1.0"
description = "This repo contains the homework answers for the MLOps Zoomcamp organized by DataTalksClub"
authors = ["Jirapat Intaaue <156293220+omjirapat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "1.5.0"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
evidently = "^0.4.28"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
